# t9fox_trading

./: .env.example  .gitignore  README.md  TRADING_GUIDE.md  pyproject.toml  register_task.ps1  serve.bat  serve.ps1  watchlist.txt
scripts/: check_db.py  pnl_fomo.py  pnl_summary.py  verify_order_callback.py
src/t9fox/: __init__.py  cli.py  config.py  constants.py
src/t9fox/backtest/: __init__.py  engine.py  ma_breakout.py
src/t9fox/broker/: credentials.py  sinopac.py
src/t9fox/data/: __init__.py  institutional.py  kbars_cache.py  twse_daily.py
src/t9fox/db/: store.py
src/t9fox/runner/: monitor.py  precheck.py  scheduler.py
src/t9fox/strategy/: __init__.py  base.py  breakout.py  ma_breakout.py  ma_crossover.py
src/t9fox/web/: __init__.py  server.py
tests/: test_twse_parse.py
web/netflix-style/: app.js  index.html  styles.css
