[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t9fox-trade"
version = "0.1.0"
description = "Taiwan (TWSE) stock quantitative trading: data, backtest, strategies"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.28",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
sinopac = ["shioaji>=1.1", "python-dotenv>=1.0"]

[project.scripts]
t9fox = "t9fox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
